test_files/fails/t_select_outside_delay.ar
let rec foo =
    let y = select (wait second) (wait second) in
    delay (adv (wait second) :: foo);

console <- foo;
